Updated folder icon.

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="../PNG/folder.png" />
+    <link rel="icon" href="../PNG/folder_16px.png" />
     <link rel="stylesheet" href="index.css" />
     <title>New Carved Gray</title>
   </head>
