--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
     <div class="main">
       <h1>New Carved Gray Icons</h1>
 
-      <div id="output"></div>
+      <div id="output" class="windows"></div>
 
       <a href="https://github.com/jesuscc1993/new-carved-gray-icons"
         >View source on GitHub</a
